--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>wp_base</title>
+  <title>image finder</title>
 </head>
 
-<body></body>
+<body>
+
+  <form class="search-form" id="search-form">
+    <input
+      id="query"
+      type="text"
+      name="query"
+      autocomplete="off"
+      placeholder="Search images..."
+    />
+  </form>
+
+  <ul class="gallery">
+    <!-- Список <li> с карточками изображений -->
+  </ul>
+
+</body>
 
 </html>
