--- a/src/index.html
+++ b/src/index.html
@@ -1,43 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-      crossorigin="anonymous"
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>image-finder</title>
+  <link
+  href="https://fonts.googleapis.com/icon?family=Material+Icons"
+  rel="stylesheet"
+/>
+</head>
+
+<body>
+  <form class="search-form" id="search-form">
+    <input
+      id="query"
+      type="text"
+      name="query"
+      autocomplete="off"
+      placeholder="Search images..."
     />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <form class="search-form" id="search-form">
-      <input
-        type="text"
-        name="search"
-        placeholder="Type your query here"
-        autocomplete="off"
-        id="query"
-      />
-    </form>
-    <ul class="gallery"></ul>
-    <button type="button" data-action="load more" class="btn btn-loading">
-      <span
-        class="spinner-border spinner-border-sm spinner is-hidden"
-        role="status"
-        aria-hidden="true"
-      ></span>
-      <span class="label">Load more</span>
-    </button>
-  </body>
+  </form>
+
+  <ul class="gallery">
+    <!-- Список <li> с карточками изображений -->
+  </ul>
+
+</body>
+
 </html>
-
-
-
-
-
